10.New Mage Spell(s): Awe Other, Shrink Mouth (-- it's back! where did it go, anyway?)
11.Factions now have new mob modification system similar to affects/behaviors: reactions
11.New automated MOB reaction system -- see coffeemud.ini under REACTION, and the guide under FACTIONS for more info.
12.Factions now have lots of new triggers: KILL, BRIBE, TALK, MUDCHAT, ARRESTED
13.Faction triggers support parameters; see one of the new faction.ini files for details
14.New Prayer for Healers: Divine Constitution
15.STAT commands now supports: FACTIONS, ROOMSEXPLORED, AREASEXPLORED, WORLDEXPLORED
16.PROMPT now supports new codes to display all manner of personal variables.
17.Abilities/GenAbilities now support delays between allowed invocations
18.New Thief Skill: Turf War!
19.Run-time compiled java from LOAD command will now display any compile errors to user.
20.Socials now support various item-type target options.
21.New Multi-Character account system -- see COMMONACCOUNTSYSTEM in ini file.
 a.Can now LIST, CREATE, DESTROY, and MODIFY ACCOUNTS
 b.For transition muds: char selection IMPORT command lets players import their old chars to new accounts.
 c.EXPIRATION system works with accounts, when common account system is enabled. 
22.New command: LOGOUT/LOGOFF -- exits back to login prompt/char selection
23.New INI entry: EXVIEW, for selecting types of exit views for the players
24.XP Bonuses for killing HL targets will only apply if player/mob close to highest level players level.
25.New Forum system -- see FORUMJOURNALS entry in the coffeemud.ini file
26.BIG fakedb upgrade: indexing, multi-keys, ORDER BY, LIKE, COUNT, complex WHERE conditions, optomizations. ** Real DB is still better.
27.Raw material resources can now have effects (for eat/drink/whatever)
28.CL Editor for weapons/armor will now automatically rebalance damage/value/etc whenever level is changed.
29.Web Catalog: can substitute a user-selectable column (damage, basegold, etc) and sort by it. 