@@ -1391,7 +1391,7 @@ CBTMSGS=OFF
 #    LEVELS, EXPERIENCE, RACES, CLASSES, CONNSPAMBLOCK, POLLCACHE,
 #    ROOMVISITS, MAXCONNSPERIP, RANDOMITEMS, MCCP, MXP, MSP, FATGRIDS,
 #    FATAREAS, LOGINS, THREADTHREAD, JOURNALTHREAD, MAPTHREAD, MSSP,
-#    PLAYERTHREAD, SESSIONTHREAD, STATSTHREAD, CATALOGTHREAD, CATALOGCACHE,
+#    PLAYERTHREAD, SESSIONTHREAD, STATSTHREAD, CATALOGTHREAD, 
 #    DBERRORQUE, DBERRORQUESTART, MAXNEWPERIP, MAXCONNSPERACCOUNT
 DISABLE=
 
@@ -1408,9 +1408,9 @@ DEBUG=
 # NOCACHE is a list, seperated by commas, of which internal
 # objects should optomize their memory usage to an extreme
 # point by not caching important data in memory, but instead
-# making calls to the database to retreive their data.
+# making calls to the database or filesystem to retreive their data.
 # Systems which may be included are:
-# GENMOBS, ROOMDESC
+# GENMOBS, ROOMDESC, FILERESOURCES, CATALOG
 NOCACHE=
 	
 # The SAVE flag changes the normal saving and updating features
